[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pybit = "^5.8.0"  # Specify the version of the pybit module
python-telegram-bot = "21.7"
requests = "2.26.0"
Flask = "3.1.0"
telethon = "1.38.1"

[tool.poetry.dev-dependencies]
# You can add development dependencies like pytest or flake8 here, if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
